@@ -5,7 +5,8 @@
 %Error: t/t_pp_underline_bad.v:10:19: Extra underscore in meta-comment; use /*synopsys {...}*/ not /*synopsys_{...}*/
    10 |       case (1'b1) // synopsys_full_case
       |                   ^~~~~~~~~~~~~~~~~~~~~
-%Error: t/t_pp_underline_bad.v:8:4: Unknown verilator comment: '/*verilator _no_inline_module*/'
+%Error-BADVLTPRAGMA: t/t_pp_underline_bad.v:8:4: Unknown verilator comment: '/*verilator _no_inline_module*/'
     8 |    /*verilator _no_inline_module*/ 
       |    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+                     ... For error description see https://verilator.org/warn/BADVLTPRAGMA?v=latest
 %Error: Exiting due to
